[metadata]
name = reiz
version = 0.0.1
description = Tools for working with source code
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/isidentical/reizio
author = isidentical
author_email = isidentical@gmail.com
license_file = LICENSE.txt

[options]
packages = find:
python_requires = >=3.8
